# UnityMCP

./: .gitignore  README.md  apply_attach.json  cmd.json  fix_broken.json  write_ok.json
docs/: demo_script.md
mcp_unitymcp/: README.md  pyproject.toml  test_e2e.py
mcp_unitymcp/scripts/: run_server.sh
mcp_unitymcp/src/unitymcp_mcp/: client.py  schema.py  server.py
unity/UnityMCPProject/Assets/: Main.unity .unity
unity/UnityMCPProject/Assets/Kernel/: UNITYMCP_KERNEL_RULES.md  UnityMCPCommandExecutor.cs  UnityMCPCommandModels.cs  UnityMCPEndpoints.cs  UnityMCPLogBuffer.cs  UnityMCPMainThread.cs  UnityMCPMenu.cs  UnityMCPScriptWriter.cs  UnityMCPServer.cs  UnityMCPSnapshotBuilder.cs
unity/UnityMCPProject/ProjectSettings/: ProjectSettings.asset
